--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,14 +106,14 @@ header{
 }
 .bigheadline {
 	font-family: 'Raleway', sans-serif;
-	font-weight: 100;
-	font-size: 10em;
+	font-weight: 80;
+	font-size: 6em;
 	margin: 0;
 }
 .subheadline {
 	font-family: 'Titillium Web', sans-serif;
 	font-weight: 200;
-	font-size: 3em;
+	font-size: 2em;
 	margin: 0;
 }
 
@@ -252,10 +252,10 @@ header{
 //  05 - Imagen
 /////////////////////////////////////////////////////////////////////*/
 
-.imagen {
-	padding-top:100px;
-	align: center;
-	padding-bottom:50px
+#imagen figure img {
+	max-width: 100%;
+	display: block;
+	position: relative;
 }
 
 /* ///////////////////////////////////////////////////////////////////// 
