--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,7 +255,7 @@ header{
 #imagen figure img {
 	max-width: 100%;
 	display: block;
-	position: relative;
+	position: center;
 }
 
 /* ///////////////////////////////////////////////////////////////////// 
