--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,12 +109,14 @@ header{
 	font-weight: 80;
 	font-size: 5em;
 	margin: 0;
+	color:#0000;
 }
 .subheadline {
 	font-family: 'Titillium Web', sans-serif;
 	font-weight: 200;
 	font-size: 2em;
 	margin: 0;
+	color:#0000
 }
 
 .scrollDown {
