--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ header{
 }
 .center {
     text-align: center;
-    color: #FFAA00;
+    color: #FF5656;
 }
 .bigheadline {
 	font-family: 'Raleway', sans-serif;
