--- a/assets/css/style-2.css
+++ b/assets/css/style-2.css
@@ -135,6 +135,18 @@ a:hover,a:active,a:focus{
 }
 
 /* ///////////////////////////////////////////////////////////////////// 
+//  04 - estaciones
+/////////////////////////////////////////////////////////////////////*/
+
+#estaciones div {
+	allign: center;
+	border: 10px solid black;
+	float: center;
+}
+	
+	
+
+/* ///////////////////////////////////////////////////////////////////// 
 //  08 - Footer 
 /////////////////////////////////////////////////////////////////////*/
 
