--- a/assets/css/style-2.css
+++ b/assets/css/style-2.css
@@ -141,9 +141,10 @@ a:hover,a:active,a:focus{
 #estaciones div {
 	allign: center;
 	border: 5px solid black;
-	float: center;
 	margin:10px;
-	padding:10px;
+	width:80%;
+	height:100px
+	
 }
 	
 	
