--- a/assets/css/style-2.css
+++ b/assets/css/style-2.css
@@ -138,7 +138,7 @@ a:hover,a:active,a:focus{
 //  04 - estaciones
 /////////////////////////////////////////////////////////////////////*/
 
-#estaciones div {
+#boga, #jaula, #bauhaus, #pieza div {
 	allign: center;
 	border: 5px solid black;
 	margin:10px;
