--- a/assets/css/style-2.css
+++ b/assets/css/style-2.css
@@ -140,9 +140,12 @@ a:hover,a:active,a:focus{
 
 #boga, #jaula, #bauhaus, #pieza div {
 	allign: center;
-	border: 5px solid black;
-	margin:10px;
-	
+	border: 5px solid #FF5656;
+	margin:5px;
+	padding-left:20px;
+	padding-right:20px;
+	padding-top:30px;
+	allign: center
 	
 }
 	
