--- a/assets/css/style-2.css
+++ b/assets/css/style-2.css
@@ -145,7 +145,8 @@ a:hover,a:active,a:focus{
 	padding-left:20px;
 	padding-right:20px;
 	padding-top:30px;
-	allign: center
+	allign: center;
+	width: 90%;
 	
 }
 	
