--- a/assets/css/style-2.css
+++ b/assets/css/style-2.css
@@ -149,7 +149,9 @@ a:hover,a:active,a:focus{
 	width: 90%;
 	
 }
-	
+
+#pieza div{
+	padding: 30px 20px 0px
 	
 
 /* ///////////////////////////////////////////////////////////////////// 
