--- a/assets/css/style-2.css
+++ b/assets/css/style-2.css
@@ -150,7 +150,9 @@ a:hover,a:active,a:focus{
 	
 }
 
-	
+#services {
+	padding-top:20px;
+}
 
 /* ///////////////////////////////////////////////////////////////////// 
 //  08 - Footer 
