--- a/assets/css/style-2.css
+++ b/assets/css/style-2.css
@@ -155,6 +155,8 @@ a:hover,a:active,a:focus{
 #boga, #jaula, #bauhaus, #pieza h3 {
 	font-family: 'Dosis', sans-serif;
 	font-size:20px;
+	border:2px solid black;
+	text-allign:center;
 	
 }
 #services {
