--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,13 +107,13 @@ header{
 .bigheadline {
 	font-family: 'Raleway', sans-serif;
 	font-weight: 70;
-	font-size: 40px;
+	font-size: 80px;
 	margin: 0;
 }
 .subheadline {
 	font-family: 'Titillium Web', sans-serif;
 	font-weight: 200;
-	font-size: 10px;
+	font-size: 50px;
 	margin: 0;
 }
 
@@ -256,6 +256,7 @@ header{
 	max-width: 100%;
 	display: block;
 	position: center;
+	allign:center;
 }
 
 /* ///////////////////////////////////////////////////////////////////// 
