--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -372,7 +372,7 @@ header{
 }
 .button:hover {
     background: white;
-    color: #000;
+    color: #f9ca24;
 }
 .btn-center {
     display: block;
@@ -382,7 +382,7 @@ header{
 .big.button {
     border: 1px solid #000;
     font-size: 2em;
-    color: #000;
+    color: #f9ca24;
     padding: 15px 30px;
 }
 .big.button:hover {
