--- a/assets/css/style-accordeon.css
+++ b/assets/css/style-accordeon.css
@@ -35,3 +35,6 @@
     overflow: hidden;
     transition: max-height 0.2s ease-out;
 }
+.botonimagen{
+  background-image:url(assets/images/circulo.jpg);
+}
