--- a/assets/css/style-accordeon.css
+++ b/assets/css/style-accordeon.css
@@ -1,15 +1,16 @@
 .accordion {
-    background-color: #eee;
+    background-image:url(assets/images/circulo.jpg);
     color: #444;
     cursor: pointer;
     padding: 18px;
-    width: 100%;
+    width: 100px;
     border: none;
-    text-align: left;
     outline: none;
     font-size: 15px;
     transition: 0.4s;
-    background-image:url(assets/images/circulo.jpg);
+    background-repeat:no-repeat;
+    baackground-position:center;
+    
 }
 
 .active,
