--- a/assets/css/style-accordeon.css
+++ b/assets/css/style-accordeon.css
@@ -3,7 +3,7 @@
     cursor: pointer;
     padding: 18px;
     width: 200px;
-    heigth: 200px;
+    height: 200px;
     border: none;
     outline: none;
     font-size: 15px;
