--- a/assets/css/style-accordeon.css
+++ b/assets/css/style-accordeon.css
@@ -61,6 +61,8 @@
     padding: 0 18px;
     background-color: white;
     max-height: 0;
+    width:0px;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
-
+}
+    
