--- a/assets/css/style-accordeon.css
+++ b/assets/css/style-accordeon.css
@@ -64,5 +64,6 @@
     width:0px;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
+    transition: max-width 0.2s ease-out;
 }
     
