--- a/assets/css/style-accordeon.css
+++ b/assets/css/style-accordeon.css
@@ -61,7 +61,7 @@
     padding: 0 18px;
     background-color: white;
     max-height: 0;
-    width:0px;
+    max-width:0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
     transition: max-width 0.2s ease-out;
