--- a/assets/css/style-accordeon.css
+++ b/assets/css/style-accordeon.css
@@ -1,3 +1,9 @@
+.row {
+    display:flex;
+    justify-content:center;
+    align-content:center;
+}
+    
 .accordion {
     display:inline-block;
     cursor: pointer;
