--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ html, body {
 }
 
 body {
-	font-family: 'Lato', sans-serif;
+	font-family: 'ZCOOL XiaoWei', sans-serif;
 }
 h1,h2,h3,h4,h5,h6 {
 	font-family: 'Dosis', sans-serif;
