--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ a:hover,a:active,a:focus{
 /////////////////////////////////////////////////////////////////////*/
 
 header{
-	background: url(../images/bkground.jpg) no-repeat;
+	background: url(../images/bkground1.jpg) no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: 50% -50px;
