--- a/assets/css/style-accordeon.css
+++ b/assets/css/style-accordeon.css
@@ -22,21 +22,21 @@
 }
 
 #bauhaus {
-        background:url('assets/images/Isla Bauhaus') no-repeat;
+        background:url('../images/Isla Bauhaus.jpg') no-repeat;
         background-position:center;
 }
 
 #jaula {
-        background:url('assets/images/Isla Jaula.jpg') no-repeat;
+        background:url('../images/Isla Jaula.jpg') no-repeat;
         background-position:center;
 }
 
 #pieza {
-        background:url('assets/images/Isla Pieza.jpg')no-repeat;
+        background:url('../images/Isla Pieza.jpg')no-repeat;
         background-position:center;
 }
 #otra {
-        background:url('assets/images/Isla Fad.jpg')no-repeat;
+        background:url('../images/Isla Fad.jpg')no-repeat;
         background-position:center;
 }
 
