--- a/assets/css/style-accordeon.css
+++ b/assets/css/style-accordeon.css
@@ -11,7 +11,7 @@
     width: 200px;
     height: 200px;
     border: 2px solid black;
-    margin:5px
+    padding:10px
     outline: none;
     transition: 0.4s;
     
