--- a/assets/css/style-accordeon.css
+++ b/assets/css/style-accordeon.css
@@ -11,8 +11,8 @@
     width: 200px;
     height: 200px;
     border: 1px solid black;
-    padding-right:5px;
-    padding-left.5px
+    margin-right:5px;
+    margin-left.5px
     outline: none;
     transition: 0.4s;
     
