--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,7 +136,7 @@ header{
 /////////////////////////////////////////////////////////////////////*/
 
 #navigation{
-	background: #111;
+	background: #f39c12;
 }
 .nav-wrap {
 	position: fixed;
