--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,12 +106,14 @@ header{
     color: #FF5656;
 }
 .bigheadline {
+	background-color:#f39c12,0.4;
 	font-family: 'Raleway', sans-serif;
 	font-weight: 70;
 	font-size: 80px;
 	margin: 0;
 }
 .subheadline {
+	background-color:#f39c12,0.4;
 	font-family: 'Titillium Web', sans-serif;
 	font-weight: 200;
 	font-size: 50px;
