--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,7 +103,7 @@ header{
 }
 .center {
     text-align: center;
-    color: #FF5656;
+    color: #ffffff;
 }
 .bigheadline {
 	background-color:#f39c12,0.4;
