--- a/assets/css/style-accordeon.css
+++ b/assets/css/style-accordeon.css
@@ -37,7 +37,7 @@
         background:url('../images/Isla Pieza.jpg')no-repeat;
         background-position:center;
 }
-#otra {
+#fad {
         background:url('../images/Isla Fad.jpg')no-repeat;
         background-position:center;
 }
