--- a/assets/css/style-accordeon.css
+++ b/assets/css/style-accordeon.css
@@ -70,3 +70,9 @@
     transition: max-width 0.2s ease-out;
 }
     
+#color #estructura #simplif #trama #pag4:{
+    display:inline-block;
+    vertical-allign:top;
+}
+
+
