--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,11 +95,11 @@ a:hover,a:active,a:focus{
 //  02 - Header 
 /////////////////////////////////////////////////////////////////////*/
 
-header{
-	background: url(../images/Pagina 1-01.jpg) no-repeat;
-	background-size: cover;
-	background-attachment: fixed;
-	background-position: 50% -50px;
+#header img{
+	height: 90%;
+	width:90%;
+	padding-bottom:0px;
+	margin-bottom:0px
 }
 .center {
     text-align: center;
@@ -132,80 +132,6 @@ header{
 	transition: 0.4s ease all;
 }
 
-
-/* ///////////////////////////////////////////////////////////////////// 
-//  03 - Navigation 
-/////////////////////////////////////////////////////////////////////*/
-
-#navigation{
-	background: #f39c12;
-}
-.nav-wrap {
-	position: fixed;
-	top: 0;
-	width: 100%;
-	z-index: 9999;
-}
-
-.logo {
-	height: 76px;
-	display: table;
-	text-align: left;
-}
-
-.logo-text {
-    font-size: 2em;
-    padding: 0.2em 0;
-    color: #fff;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 80;
-    display: table-cell;
-	vertical-align: middle;
-}
-
-.menu {
-    float: right;
-    font-size: 3em;
-    color: #fff;
-    padding-top: 10px;
-}
-.dropdown-menu {
-    min-width: 240px;
-    right: 0;
-    left: auto;
-    border: 1px solid #000;
-    box-shadow: none;
-    border-radius: 0px;
-    margin-top: 5px;
-}
-.dropdown-menu ul {
-    list-style: none;
-    margin: 0;
-    padding: 1em 2em;
-    margin-top: 5%;
-}
-.dropdown-menu ul li {
-    padding: 0.3em 0em 0.6em 0em;
-    font-size: 1.3em;
-    position: relative;
-}
-.dropdown-menu ul li a i {
-    position: absolute;
-    right: 0;
-    top: 20%;
-    font-size: 25px;
-}
-.arrow-up {
-	width: 0; 
-	height: 0; 
-	border-left: 8px solid transparent;
-	border-right: 8px solid transparent;
-	
-	border-bottom: 8px solid white;
-	float: right;
-	margin-top: -5%;
-	margin-right: 23px;
-}
 
 
 /* ///////////////////////////////////////////////////////////////////// 
@@ -266,9 +192,12 @@ header{
 /////////////////////////////////////////////////////////////////////*/
 
 
-#portfolio {
-    padding: 80px 0px 0px 0px;
+#portfolio img {
+    height:90%;
+    width:90;
+	margin-top:0px;
 }
+
 
 .port {
 	list-style: none;
