--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ html, body {
 
 body {
 	font-family: 'ZCOOL XiaoWei', sans-serif;
-	background-color:#81ecec
+	background-color:#D4ECEF
 }
 h1,h2,h3,h4,h5,h6 {
 	font-family: 'Dosis', sans-serif;
